fix spacing

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -74,9 +74,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   .note-title {
-    margin-left: none;
-    padding-left: none;
-    font-size: 2rem;
-    height: 80px;
+    font-size: 1rem;
+    height: 60px;
   }
 }
